--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,9 @@ h1, h2, h3, h4, h5, h6, p {
 
 .header {
 border-bottom: 1px solid #e7e9fc;
+box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .container {
@@ -84,6 +87,26 @@ align-items: center;
     text-decoration: none;
     padding: 24px 0 24px;
     display: block;
+    
+
+}
+
+.nav-link::after {
+    content: "";
+    width: 100%;
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    height: 4px;
+    background-color: #404bbf;
+    border-radius: 2px;
+
+}
+
+.special { 
+    position: relative;
+    color: #404bbf;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
@@ -103,6 +126,7 @@ align-items: center;
     text-decoration: none;
     margin-left: auto;
     padding: 24px 0 24px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
 }
 
