--- a/css/styles.css
+++ b/css/styles.css
@@ -87,11 +87,15 @@ align-items: center;
     text-decoration: none;
     padding: 24px 0 24px;
     display: block;
-    
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
-.nav-link::after {
+.nav-link.special { 
+    position: relative;
+}
+
+.nav-link.special::after {
     content: "";
     width: 100%;
     position: absolute;
@@ -103,15 +107,8 @@ align-items: center;
 
 }
 
-.special { 
-    position: relative;
-    color: #404bbf;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-}
-
 .nav-link:hover,
-.nav-link:focus {
+.nav-link:focus, .nav-link.special {
     color: #404bbf;
 }
 
@@ -147,6 +144,14 @@ align-items: center;
 .section-title {
     background-color: #2e2f42;
     padding: 188px 0 188px;
+    max-width: 1440px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    margin-left: auto;
+    margin-right: auto;
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office.jpg);
     
 }
 
@@ -192,7 +197,7 @@ align-items: center;
     cursor: pointer;
 }
 
-                                                    /*second section*/
+                                                    /*first section*/
 
 
 .section-first {
