--- a/css/styles.css
+++ b/css/styles.css
@@ -150,7 +150,6 @@ align-items: center;
     background-size: cover;
     margin-left: auto;
     margin-right: auto;
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office.jpg);
     
 }
@@ -187,7 +186,7 @@ align-items: center;
     cursor: pointer;
     margin-left: auto;
     margin-right: auto;
-    
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
    
 }
 
@@ -227,6 +226,18 @@ align-items: center;
 
 .first-list {
     flex-basis: calc((100% - 72px) / 4);
+}
+
+.strategy-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 112px;
+    background-color: #f4f4fd;
+    border-radius: 4px;
+    border: 1px solid #8e8f99;
+    margin-bottom: 8px;
+    
 }
 
 .strategy-headings {
