was icons svg added to the third section

--- a/css/styles.css
+++ b/css/styles.css
@@ -237,7 +237,7 @@ align-items: center;
     border-radius: 4px;
     border: 1px solid #8e8f99;
     margin-bottom: 8px;
-    
+
 }
 
 .strategy-headings {
@@ -284,6 +284,9 @@ align-items: center;
     background-color: #FFFFFF;
     flex-basis: calc((100% - 3 * 24px) / 4);
     border-radius: 0px 0px 4px 4px;
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .empl {
@@ -308,6 +311,40 @@ align-items: center;
     text-align: center;
 }
 
+.link-icon {
+    padding: 32px 0 32px;
+}
+
+.icon-list {
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+    list-style: none;
+}
+.link-icon-list-item {
+    width: 40px;
+    height: 40px;
+}
+
+.link-item {
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.link-item:hover,
+.link-item:focus {
+    background-color: #404bbf;
+    cursor: pointer;
+}
+
+.tem-svg {
+    fill: #f4f4fd;
+}
 
                                                             /*portfolio section*/
 .portfolio {
