--- a/css/styles.css
+++ b/css/styles.css
@@ -311,10 +311,6 @@ align-items: center;
     text-align: center;
 }
 
-.link-icon {
-    padding: 32px 0 32px;
-}
-
 .icon-list {
     display: flex;
     justify-content: center;
@@ -334,6 +330,7 @@ align-items: center;
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link-item:hover,
