--- a/css/styles.css
+++ b/css/styles.css
@@ -374,6 +374,36 @@ align-items: center;
     background-color: #FFFFFF;
     width: calc((100% - 48px) / 3);
     border-radius: 0px 0px 4px 4px;
+    
+}
+
+.portfolio-list-item:hover {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 2px 1px rgba(46, 47, 66, 0.08);
+        transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        transform: translateY(0%);
+}
+
+.animation-img {
+    position: relative;
+    overflow: hidden;
+}
+
+.portfolio-hidden-text {
+    position: absolute;
+    top: 0;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
+    padding: 40px 32px;
+    background-color: #4d5ae5;
+    height: 100%;
+    width: 100%;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .portfolio-list-item-text {
