--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 /*Global styles*/
-.body {
+body {
     font-family: "Roboto", sans-serif;
     color: #434455;
     background-color: #FFFFFF;
@@ -374,14 +374,13 @@ align-items: center;
     background-color: #FFFFFF;
     width: calc((100% - 48px) / 3);
     border-radius: 0px 0px 4px 4px;
-    
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-list-item:hover {
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
         0px 1px 1px rgba(46, 47, 66, 0.16),
         0px 2px 1px rgba(46, 47, 66, 0.08);
-        transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
         transform: translateY(0%);
 }
 
@@ -404,6 +403,9 @@ align-items: center;
     transform: translateY(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
+}
+.portfolio-list-item:hover .portfolio-hidden-text {
+    transform: translateY(0%);
 }
 
 .portfolio-list-item-text {
