--- a/css/styles.css
+++ b/css/styles.css
@@ -439,6 +439,16 @@ align-items: center;
     padding: 100px 0;
 }
 
+.container-footer{
+    display: flex;
+    align-items: baseline;
+}
+
+.footer-logo-container {
+    
+    margin-right: 120px;
+}
+
 .footer-logo {
     font-family: "Raleway", sans-serif;
     font-weight: 700;
@@ -463,3 +473,47 @@ align-items: center;
     max-width: 264px;
 }
 
+.media-text {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #FFFFFF;
+    margin-bottom: 16px;
+
+}
+
+.footer-list {
+    display: flex;
+    gap: 16px;
+    list-style: none;
+}
+
+
+.footer-link {
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-link:hover,
+.lfooter-link:focus {
+    background-color: #31d0aa;;
+    cursor: pointer;
+}
+
+.footer-icon-svg{
+    fill: #f4f4fd;
+    width: 24px;
+    height: 24px;
+}
+
+.footer-list-item {
+    width: 40px;
+    height: 40px;
+}
