--- a/css/styles.css
+++ b/css/styles.css
@@ -331,6 +331,7 @@ align-items: center;
     align-items: center;
     justify-content: center;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    margin-top: 8px;
 }
 
 .link-item:hover,
@@ -341,6 +342,7 @@ align-items: center;
 
 .tem-svg {
     fill: #f4f4fd;
+    
 }
 
                                                             /*portfolio section*/
